Added handler to hide/unhide free-transform pointers (reference prominic/Moonshine-IDE#341)

--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -115,6 +115,11 @@
 			this.resizer.target = this._selectedItem;
 			this.dispatchEvent(new Event(Event.CHANGE));
 		}
+		
+		public function setResizerVisible(value:Boolean):void
+		{
+			if (this.resizer) this.resizer.visible = value;
+		}
 
 		public function toXML():XML
 		{
