- selectedItem null pointer exception throws when deselect/reselect PanelGrid and triggers an undo - fixed - Columns header list do not updates when removing column - fixed - Columns header list disappears when undo - fixed - Column header title edit now saves to XML - Column header titles now loads from XML (reference prominic/Moonshine-IDE#329)

--- a/src/view/primeFaces/forms/DataTableForm.mxml
+++ b/src/view/primeFaces/forms/DataTableForm.mxml
@@ -159,18 +159,17 @@
 
 		override public function set selectedItem(value:ISurfaceComponent):void
 		{
+			if (selectedItem) selectedItem.removeEventListener(DataTable.EVENT_CHILDREN_UPDATED, onTableUpdated);
+			
 			super.selectedItem = value;
-
-			if (value && !value.hasEventListener(DataTable.EVENT_CHILDREN_UPDATED))
-			{
-				value.addEventListener(DataTable.EVENT_CHILDREN_UPDATED, onTableUpdated, false, 0, true);
-			}
+			if (value) selectedItem.addEventListener(DataTable.EVENT_CHILDREN_UPDATED, onTableUpdated, false, 0, true);
 		}
 
 		protected function onRowEditStarts(event:GridItemEditorEvent):void
 		{
 			updatePropertyEditorPriorToEdit();
 		}
+			
 		]]>
 	</fx:Script>
 	
